[project]
name = "agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[openai]>=1.2.7",
    "python-dotenv>=1.2.1",
]
