[project]
name = "side_effects_mcp"
version = "0.1.0"
description = "MCP Server created with Arcade.dev"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.11.1,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.8.3,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# Tell Arcade.dev that this package has Arcade tools
[project.entry-points.arcade_toolkits]
toolkit_name = "side_effects_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/side_effects_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = false
